# Python-Web-Scraping-Projects

./: README.md
1_crawling_overview/snippets/: asynchronous_crawling_example.py  syncrhonous_crawling_example.py
2_remotepython/: README.md
2_remotepython/project/: pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
2_remotepython/project/docs/: genesis.html  run_sample190323.csv
2_remotepython/project/remotepython/: cli.py  crawler.py
3_football/: README.md  foo.json
3_football/project/: pyproject.toml  requirements-tests.txt  requirements.txt  setup.py
3_football/project/docs/: README.md  genesis.html  node_embed.json
3_football/project/football/: cli.py  crawler.py  foo  foo.json  monitor.py  notifiers.py
4_news/: README.md
4_news/project/: pyproject.toml  setup.py
4_news/project/docs/: nytimes-graphql_payload.json  nytimes-graphql_response.json  robots.txt
4_news/project/nytimes/: articles.jl  cli.py  consume.py  discover.py  discover_graphql.py  results.jl
4_news/snippets/: async_def_example.py  coroutine_example.py  how-to-parse-robots.txt.py  how-to-parse-sitemap.py  how-to-regex-in-html.py
5_shopify/: README.md
5_shopify/project/: pyproject.toml
5_shopify/project/shopify/: cli.py  consume.py  discover.py
5_shopify/snippets/: url_patterns.py
6_schema/project/: pyproject.toml
6_schema/project/schema/: cli.py
6_schema/project/schema/parsers/: jsonld.py  microdata.py  opengraph.py  rdfa.py
6_schema/project/schema/spiders/: consume.py  identify.py
6_schema/project/tests/test_parsers/: test_jsonld.py  test_microdata.py  test_og.py
6_schema/samples/: urls.txt  walmart.html  yellowpages.html
6_schema/snippets/: opengraph-rdfa-example.html
