[tool.poetry]
name = "remotepython"
version = "1.0.0"
description = "Job listing crawler for remotepython.com website"
authors = ["Bernardas Ališauskas <bernardas.alisauskas@pm.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.22"
parsel = "^1.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
parselcli = "^0.33.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
remotepython = 'remotepython.cli:main'
