[tool.poetry]
name = "nytimes"
version = "1.0.0"
description = "Articles crawler for nytimes.com"
authors = ["Bernardas Ališauskas <bernardas.alisauskas@pm.com>"]
license = "GPL-3.0+"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
requests = "^2.22"
parsel = "^1.5"
aiohttp = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
parselcli = "^0.33.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
nytimes = 'nytimes.cli:main'
